// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk stack creation for map service creates Map policy for Authorized and Guest users access type 1`] = `
Object {
  "Mappings": Object {
    "RegionMapping": Object {
      "eu-west-2": Object {
        "locationServiceRegion": "eu-central-1",
      },
    },
  },
  "Outputs": Object {
    "Arn": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomMap",
          "MapArn",
        ],
      },
    },
    "Name": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomMap",
          "MapName",
        ],
      },
    },
    "Region": Object {
      "Value": Object {
        "Fn::FindInMap": Array [
          "RegionMapping",
          Object {
            "Ref": "AWS::Region",
          },
          "locationServiceRegion",
        ],
      },
    },
    "Style": Object {
      "Value": Object {
        "Ref": "mapStyle",
      },
    },
  },
  "Parameters": Object {
    "authRoleName": Object {
      "Type": "String",
    },
    "authmockAuthUserPoolId": Object {
      "Type": "String",
    },
    "authuserPoolGroupsadminGroupGroupRole": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "isDefault": Object {
      "Type": "String",
    },
    "mapName": Object {
      "Type": "String",
    },
    "mapStyle": Object {
      "Type": "String",
    },
    "unauthRoleName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomMap": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomMapLambda51D5D430",
            "Arn",
          ],
        },
        "env": Object {
          "Ref": "env",
        },
        "mapName": Object {
          "Fn::Join": Array [
            "-",
            Array [
              Object {
                "Ref": "mapName",
              },
              Object {
                "Ref": "env",
              },
            ],
          ],
        },
        "mapStyle": Object {
          "Ref": "mapStyle",
        },
        "region": Object {
          "Fn::FindInMap": Array [
            "RegionMapping",
            Object {
              "Ref": "AWS::Region",
            },
            "locationServiceRegion",
          ],
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomMapLambda51D5D430": Object {
      "DependsOn": Array [
        "CustomMapLambdaServiceRoleDefaultPolicy983FDD4E",
        "CustomMapLambdaServiceRole4EE7732C",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
exports.handler = async function (event, context) {
  try {
    console.log('REQUEST RECEIVED:' + JSON.stringify(event));
    const pricingPlan = 'RequestBasedUsage';
    if (event.RequestType == 'Create') {
      let params = {
        MapName: event.ResourceProperties.mapName,
        Configuration: {
          Style: event.ResourceProperties.mapStyle,
        },
        PricingPlan: pricingPlan
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.createMap(params).promise();
      console.log('create resource response data' + JSON.stringify(res));
      if (res.MapName && res.MapArn) {
        await response.send(event, context, response.SUCCESS, res, params.MapName);
      } else {
        await response.send(event, context, response.FAILED, res, params.MapName);
      }
    }
    if (event.RequestType == 'Update') {
      let params = {
        MapName: event.ResourceProperties.mapName,
        PricingPlan: pricingPlan
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.updateMap(params).promise();
      console.log('update resource response data' + JSON.stringify(res));
      if (res.MapName && res.MapArn) {
        await response.send(event, context, response.SUCCESS, res, params.MapName);
      } else {
        await response.send(event, context, response.FAILED, res, params.MapName);
      }
    }
    if (event.RequestType == 'Delete') {
      let params = {
        MapName: event.ResourceProperties.mapName
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.deleteMap(params).promise();
      console.log('delete resource response data' + JSON.stringify(res));
      await response.send(event, context, response.SUCCESS, res, params.MapName);
    }
  } catch (err) {
    console.log(err.stack);
    const res = { Error: err };
    await response.send(event, context, response.FAILED, res, event.ResourceProperties.mapName);
    throw err;
  }
};
",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomMapLambdaServiceRole4EE7732C",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomMapLambdaServiceRole4EE7732C": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomMapLambdaServiceRoleDefaultPolicy983FDD4E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "geo:CreateMap",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "geo:UpdateMap",
                "geo:DeleteMap",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Sub": Array [
                  "arn:aws:geo:\${region}:\${account}:map/\${mapName}",
                  Object {
                    "account": Object {
                      "Ref": "AWS::AccountId",
                    },
                    "mapName": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Ref": "mapName",
                          },
                          Object {
                            "Ref": "env",
                          },
                        ],
                      ],
                    },
                    "region": Object {
                      "Fn::FindInMap": Array [
                        "RegionMapping",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        "locationServiceRegion",
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomMapLambdaServiceRoleDefaultPolicy983FDD4E",
        "Roles": Array [
          Object {
            "Ref": "CustomMapLambdaServiceRole4EE7732C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "MapPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:GetMapStyleDescriptor",
                "geo:GetMapGlyphs",
                "geo:GetMapSprites",
                "geo:GetMapTile",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CustomMap",
                  "MapArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "mapName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Ref": "authRoleName",
          },
          Object {
            "Ref": "unauthRoleName",
          },
          Object {
            "Fn::Join": Array [
              "-",
              Array [
                Object {
                  "Ref": "authmockAuthUserPoolId",
                },
                "adminGroupGroupRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`cdk stack creation for map service creates Map policy for Authorized users only access type 1`] = `
Object {
  "Mappings": Object {
    "RegionMapping": Object {
      "eu-west-2": Object {
        "locationServiceRegion": "eu-central-1",
      },
    },
  },
  "Outputs": Object {
    "Arn": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomMap",
          "MapArn",
        ],
      },
    },
    "Name": Object {
      "Value": Object {
        "Fn::GetAtt": Array [
          "CustomMap",
          "MapName",
        ],
      },
    },
    "Region": Object {
      "Value": Object {
        "Fn::FindInMap": Array [
          "RegionMapping",
          Object {
            "Ref": "AWS::Region",
          },
          "locationServiceRegion",
        ],
      },
    },
    "Style": Object {
      "Value": Object {
        "Ref": "mapStyle",
      },
    },
  },
  "Parameters": Object {
    "authRoleName": Object {
      "Type": "String",
    },
    "authmockAuthUserPoolId": Object {
      "Type": "String",
    },
    "authuserPoolGroupsadminGroupGroupRole": Object {
      "Type": "String",
    },
    "env": Object {
      "Type": "String",
    },
    "isDefault": Object {
      "Type": "String",
    },
    "mapName": Object {
      "Type": "String",
    },
    "mapStyle": Object {
      "Type": "String",
    },
    "unauthRoleName": Object {
      "Type": "String",
    },
  },
  "Resources": Object {
    "CustomMap": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "CustomMapLambda51D5D430",
            "Arn",
          ],
        },
        "env": Object {
          "Ref": "env",
        },
        "mapName": Object {
          "Fn::Join": Array [
            "-",
            Array [
              Object {
                "Ref": "mapName",
              },
              Object {
                "Ref": "env",
              },
            ],
          ],
        },
        "mapStyle": Object {
          "Ref": "mapStyle",
        },
        "region": Object {
          "Fn::FindInMap": Array [
            "RegionMapping",
            Object {
              "Ref": "AWS::Region",
            },
            "locationServiceRegion",
          ],
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "CustomMapLambda51D5D430": Object {
      "DependsOn": Array [
        "CustomMapLambdaServiceRoleDefaultPolicy983FDD4E",
        "CustomMapLambdaServiceRole4EE7732C",
      ],
      "Properties": Object {
        "Code": Object {
          "ZipFile": "const response = require('cfn-response');
const aws = require('aws-sdk');
exports.handler = async function (event, context) {
  try {
    console.log('REQUEST RECEIVED:' + JSON.stringify(event));
    const pricingPlan = 'RequestBasedUsage';
    if (event.RequestType == 'Create') {
      let params = {
        MapName: event.ResourceProperties.mapName,
        Configuration: {
          Style: event.ResourceProperties.mapStyle,
        },
        PricingPlan: pricingPlan
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.createMap(params).promise();
      console.log('create resource response data' + JSON.stringify(res));
      if (res.MapName && res.MapArn) {
        await response.send(event, context, response.SUCCESS, res, params.MapName);
      } else {
        await response.send(event, context, response.FAILED, res, params.MapName);
      }
    }
    if (event.RequestType == 'Update') {
      let params = {
        MapName: event.ResourceProperties.mapName,
        PricingPlan: pricingPlan
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.updateMap(params).promise();
      console.log('update resource response data' + JSON.stringify(res));
      if (res.MapName && res.MapArn) {
        await response.send(event, context, response.SUCCESS, res, params.MapName);
      } else {
        await response.send(event, context, response.FAILED, res, params.MapName);
      }
    }
    if (event.RequestType == 'Delete') {
      let params = {
        MapName: event.ResourceProperties.mapName
      };
      const locationClient = new aws.Location({ apiVersion: '2020-11-19', region: event.ResourceProperties.region });
      const res = await locationClient.deleteMap(params).promise();
      console.log('delete resource response data' + JSON.stringify(res));
      await response.send(event, context, response.SUCCESS, res, params.MapName);
    }
  } catch (err) {
    console.log(err.stack);
    const res = { Error: err };
    await response.send(event, context, response.FAILED, res, event.ResourceProperties.mapName);
    throw err;
  }
};
",
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomMapLambdaServiceRole4EE7732C",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomMapLambdaServiceRole4EE7732C": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CustomMapLambdaServiceRoleDefaultPolicy983FDD4E": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "geo:CreateMap",
              "Effect": "Allow",
              "Resource": "*",
            },
            Object {
              "Action": Array [
                "geo:UpdateMap",
                "geo:DeleteMap",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Sub": Array [
                  "arn:aws:geo:\${region}:\${account}:map/\${mapName}",
                  Object {
                    "account": Object {
                      "Ref": "AWS::AccountId",
                    },
                    "mapName": Object {
                      "Fn::Join": Array [
                        "-",
                        Array [
                          Object {
                            "Ref": "mapName",
                          },
                          Object {
                            "Ref": "env",
                          },
                        ],
                      ],
                    },
                    "region": Object {
                      "Fn::FindInMap": Array [
                        "RegionMapping",
                        Object {
                          "Ref": "AWS::Region",
                        },
                        "locationServiceRegion",
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CustomMapLambdaServiceRoleDefaultPolicy983FDD4E",
        "Roles": Array [
          Object {
            "Ref": "CustomMapLambdaServiceRole4EE7732C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "MapPolicy": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "geo:GetMapStyleDescriptor",
                "geo:GetMapGlyphs",
                "geo:GetMapSprites",
                "geo:GetMapTile",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "CustomMap",
                  "MapArn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::Join": Array [
                  "-",
                  Array [
                    Object {
                      "Ref": "mapName",
                    },
                    Object {
                      "Ref": "env",
                    },
                  ],
                ],
              },
              "Policy",
            ],
          ],
        },
        "Roles": Array [
          Object {
            "Ref": "authRoleName",
          },
          Object {
            "Fn::Join": Array [
              "-",
              Array [
                Object {
                  "Ref": "authmockAuthUserPoolId",
                },
                "adminGroupGroupRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
